Fixed height of non-square studio stickers (e.g. backgrounds) so they're not squished or stretched.

--- a/app/assets/stylesheets/photoshoot/custom-studio-ui.sass
+++ b/app/assets/stylesheets/photoshoot/custom-studio-ui.sass
@@ -170,8 +170,6 @@
           &.backgrounds
             .ui-draggable
               cursor: pointer
-            img
-              height: 100px
 
           &.stickers
 
